--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 
 # testing
 /coverage
-
+/scripts/
+/db/
 # next.js
 /.next/
 /out/
@@ -26,6 +27,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
+.env.local
 .env*.local
 
 # vercel
