--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@lucide/lab": "^0.1.2",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.473.0",
     "next": "^15.2.0-canary.16",
     "pg-pool": "^3.7.0",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^2.6.0",
