--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-  "name": "interfusta-web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@lucide/lab": "^0.1.2",
-    "@neondatabase/serverless": "^0.10.4",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@shadcn/ui": "^0.0.4",
-    "@vercel/speed-insights": "^1.1.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "lucide-react": "^0.473.0",
-    "next": "^15.2.0-canary.16",
-    "pg-pool": "^3.7.0",
-    "react": "^18",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
-    "shadcn-ui": "^0.9.4",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/node": "^20.17.14",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.4.7",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.16",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
-  }
+	"name": "interfusta-web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@lucide/lab": "^0.1.2",
+		"@neondatabase/serverless": "^0.10.4",
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-popover": "^1.1.4",
+		"@radix-ui/react-select": "^2.1.4",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-tabs": "^1.1.2",
+		"@shadcn/ui": "^0.0.4",
+		"@vercel/speed-insights": "^1.1.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
+		"lucide-react": "^0.473.0",
+		"next": "^14.0.0",
+		"pg-pool": "^3.7.0",
+		"react": "^18",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "^18",
+		"shadcn-ui": "^0.9.4",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.6",
+		"@types/node": "^20.17.14",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"bcryptjs": "^2.4.3",
+		"dotenv": "^16.4.7",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.16",
+		"gh-pages": "^6.3.0",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.7.3"
+	}
 }
