--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.735.0",
+		"@aws-sdk/s3-request-presigner": "^3.735.0",
 		"@lucide/lab": "^0.1.2",
 		"@neondatabase/serverless": "^0.10.4",
 		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-label": "^2.1.1",
 		"@radix-ui/react-popover": "^1.1.4",
 		"@radix-ui/react-select": "^2.1.4",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
 		"@shadcn/ui": "^0.0.4",
+		"@squoosh/lib": "^0.3.1",
+		"@vercel/analytics": "^1.4.1",
 		"@vercel/speed-insights": "^1.1.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -28,8 +33,10 @@
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18",
 		"shadcn-ui": "^0.9.4",
+		"sharp": "^0.33.5",
 		"tailwind-merge": "^2.6.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^11.0.5"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
