--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@radix-ui/react-select": "^2.1.4",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tabs": "^1.1.2",
+		"@react-email/components": "^0.0.32",
 		"@shadcn/ui": "^0.0.4",
 		"@squoosh/lib": "^0.3.1",
 		"@vercel/analytics": "^1.4.1",
@@ -32,6 +33,8 @@
 		"react": "^18",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18",
+		"react-email": "^3.0.6",
+		"resend": "^4.1.2",
 		"shadcn-ui": "^0.9.4",
 		"tailwind-merge": "^2.6.0",
 		"tailwindcss-animate": "^1.0.7",
