Actualizar imágenes en el proyecto y modificar enlaces en la sección de proyectos destacados

--- a/data/featured-project.json
+++ b/data/featured-project.json
@@ -8,7 +8,7 @@
 		"Bigues de sostre de fusta i panells de paret"
 	],
 	"image": {
-		"url": "https://placehold.co/800x600",
-		"alt": "Proyecto destacado"
+		"url": "/Projecte.webp",
+		"alt": "Projecte destacat"
 	}
 }
